# llm

ee/: README.md  pyproject.toml
ee/expression_engine/: chain.py  example.py  main.py  util.py
expression_engine/: README.md
expression_engine/expression_engine/: chain.py  example.py  util.py
huggingface/: README.md  pyproject.toml
huggingface/huggingface/: nlp.ipynb
llm/llm/: main.py
rag/: pyproject.toml
rag/retrieval_augmented_generation/: main.py
