[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["anyangml <anyangpeng.ca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.244"
llama-cpp-python = "^0.1.77"
chromadb = "^0.4.3"
unstructured = "^0.8.4"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
